@@ -15,7 +15,7 @@
 Alias /icons/ "/usr/share/apache2/icons/"
 
 <Directory "/usr/share/apache2/icons">
-    Options -Indexes -MultiViews
+    Options FollowSymlinks
     AllowOverride None
     Order allow,deny
     Allow from all
