@@ -31,13 +31,14 @@ apache2 (2.2.21-4) unstable; urgency=low
     from text/plain to None. This lets the browser guess a proper MIME type
     instead of being forced to treat a given file according to our default type
     (Closes: #440058)
+  * Add myself to Uploaders
 
   [Stefan Fritsch]
 
   * Optimize debian/rules again to improve build time by doing most work in a
     parallelized "build-and-install-%" target.
 
- -- Arno Töll <debian@toell.net>  Tue, 13 Dec 2011 19:49:08 +0100
+ -- Arno Töll <debian@toell.net>  Tue, 13 Dec 2011 22:03:09 +0100
 
 apache2 (2.2.21-3) unstable; urgency=medium
 
